compiler/test-data/parser/errors/instructions/missing_instruction_value.frel
module test

blueprint Bad {
    box { } .. width
}
